Use exports instead of opens, remove comments